--- a/backend_python-v2/requirements.txt
+++ b/backend_python-v2/requirements.txt
@@ -13,7 +13,6 @@ django-cors-headers==4.6.0
 django-filter==24.3
 django-oauth-toolkit==3.0.1
 djangorestframework==3.15.2
-djangorestframework-jwt==1.11.0
 djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.8
 filelock==3.16.1
@@ -40,3 +39,4 @@ tzdata==2024.2
 uritemplate==4.1.1
 urllib3==2.2.3
 whitenoise==6.8.2
+gunicorn==21.2.0
