--- a/frontend_angular-v2/angular.json
+++ b/frontend_angular-v2/angular.json
@@ -31,7 +31,6 @@
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css",
               "./node_modules/ngx-toastr/toastr.css"             
-
             ],
             "scripts": []
           },
@@ -40,13 +39,13 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
+                  "maximumWarning": "4kb",
+                  "maximumError": "8kb"
                 }
               ],
               "outputHashing": "all"
@@ -77,7 +76,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "EDUTECH:build,"
+            "browserTarget": "EDUTECH:build"
           }
         },
         "test": {
