--- a/frontend_angular-v2/package.json
+++ b/frontend_angular-v2/package.json
@@ -20,12 +20,12 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
-    "@asymmetrik/ngx-leaflet": "^17.0.0",
+    "@asymmetrik/ngx-leaflet": "^16.0.0",
     "@fortawesome/angular-fontawesome": "^0.14.1",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
-    "@ngrx/store": "^17.1.1",
+    "@ngrx/store": "^16.0.0",
     "@popperjs/core": "^2.11.8",
     "apexcharts": "^3.47.0",
     "axios": "^1.7.2",
@@ -42,10 +42,10 @@
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.6.13",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "^0.13.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.12",
+    "@angular-devkit/build-angular": "^16.2.14",
     "@angular/cli": "^16.2.14",
     "@angular/compiler-cli": "^16.0.0",
     "@angular/localize": "^16.0.0",
@@ -60,7 +60,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "postcss-nesting": "^13.0.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "~5.0.2"
+    "typescript": "^5.0.2"
   }
 }
