frontend and backend containers linked

--- a/backend_python-v2/Dockerfile
+++ b/backend_python-v2/Dockerfile
@@ -1,7 +1,5 @@
 # For more information, please refer to https://aka.ms/vscode-docker-python
-FROM python:3-slim
-
-EXPOSE 8000
+FROM python:3.13-slim
 
 # Keeps Python from generating .pyc files in the container
 ENV PYTHONDONTWRITEBYTECODE=1
@@ -9,30 +7,40 @@ ENV PYTHONDONTWRITEBYTECODE=1
 # Turns off buffering for easier container logging
 ENV PYTHONUNBUFFERED=1
 
-# Install system dependencies
+WORKDIR /app
+
+# Install system dependencies including MySQL client
 RUN apt-get update && apt-get install -y \
-    pkg-config \
     default-libmysqlclient-dev \
+    gcc \
+    pkg-config \
     build-essential \
+    netcat-traditional \
     && rm -rf /var/lib/apt/lists/*
 
-# Install pip requirements
 COPY requirements.txt .
-RUN python -m pip install -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
+
+COPY . .
 
 # Create static directory
 RUN mkdir -p /app/static
 
-WORKDIR /app
-COPY . /app
-
 # Collect static files
 RUN python manage.py collectstatic --noinput
+
+# Create startup script
+COPY ./docker-entrypoint.sh /docker-entrypoint.sh
+RUN chmod +x /docker-entrypoint.sh
 
 # Creates a non-root user with an explicit UID and adds permission to access the /app folder
 # For more info, please refer to https://aka.ms/vscode-docker-python-configure-containers
 RUN adduser -u 5678 --disabled-password --gecos "" appuser && chown -R appuser /app
 USER appuser
 
+EXPOSE 8000
+
+ENTRYPOINT ["/docker-entrypoint.sh"]
+
 # During debugging, this entry point will be overridden. For more information, please refer to https://aka.ms/vscode-docker-python-debug
-CMD ["gunicorn", "--bind", "0.0.0.0:8000", "edutech_payment_engine.wsgi:application"]
+# CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
